@@ -1,5 +1,8 @@
 2018-10-21    <kennethj@gagarin.uit.no>
-    * import_SYSX.py: updated to handle ou file on utf-8 forma
+    * wipe.py:  updated to handle json format in changelog instead of pickle
+
+2018-10-21    <kennethj@gagarin.uit.no>
+    * import_SYSX.py: updated to handle ou file on utf-8 format
 
 2018-10-21    <kennethj@gagarin.uit.no>
     * import_sito.py: updated to handle ou file on utf-8 format
